Mon Feb 23 13:25:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/RepositoryManager.mpc:
          Use seperate idl project and removed dummy label, it compiles, testing
          has still to be done

Mon Feb 23 11:30:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Home_Servant_Impl_T.cpp:
          Const change

        * DAnCE/TargetManager/CmpClient.cpp:
          Fixed compile error

        * DAnCE/TargetManager/DomainDataManager.cpp:
          Fixed some errors and commented out some code blocks that
          have to be reworked

        * DAnCE/TargetManager/DomainDataManager.h:
          Updated to the new ciao, partly disabled

        * DAnCE/TargetManager/DomainEvents.idl:
          Updated include

        * DAnCE/TargetManager/ResourceCommitmentManager.cpp:
          Const change

        * DAnCE/TargetManager/TargetManager_exec.cpp:
        * DAnCE/TargetManager/TargetManager_exec.h:
          Fixed compile errors

        * DAnCE/TargetManager/TargetManagerExt.idl:
          Fixed type

        * DAnCE/TargetManager/TargetManagerImpl.idl:
          Fixed include

        * DAnCE/tests/DeploymentPlanTestReferences/DeploymentPlanTestReferences.mpc:
        * DAnCE/tests/DeploymentTest1/DeploymentTest1.mpc
          Don't use ciao_output for a test

        * MPC/config/dance_domain_application_manager.mpb:
          Add naming as base

Mon Feb 23 09:52:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/BasicSP/BasicSP.mpc
        * examples/BasicSP/BMClosedED/BMClosedED.mpc
        * examples/BasicSP/BMDevice/BMDevice.mpc
        * examples/BasicSP/BMDisplay/BMDisplay.mpc
        * examples/BasicSP/descriptors/run_test.pl
        * examples/BasicSP/EC/EC.mpc
        * examples/BasicSP/lib:
          Put all libs in the new lib directory

Mon Feb 23 09:29:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
