@@ -187,18 +187,6 @@ namespace CIDL_TargetManager_i
   }
 
   void
-  TargetManagerImpl_exec_i::ciao_preactivate ()
-  {
-    // Your code here.
-  }
-
-  void
-  TargetManagerImpl_exec_i::ciao_postactivate ()
-  {
-    // Your code here.
-  }
-
-  void
   TargetManagerImpl_exec_i::configuration_complete ()
   {
     // Your code here.
